front page styling complete. still need footer

--- a/index.html
+++ b/index.html
@@ -31,42 +31,79 @@
                 </div>
                 <div class="banner-text-box">
                     <p>
-                    Our expansive fleet and equipment provide us with unique, effective capabilities. We cover every aspect of the abatement, remediation, and demolition processes.
+                    Our expansive fleet and equipment provide us with unique, effective capabilities. We cover every aspect of the 
+                    abatement, remediation, and demolition processes.
                     </p>
                 </div>
             </div>
             <div class="services">
                 <!-- need to make images shorter without hamburgering them. also add maybe some pointers i.e. > or something -->
-                <h1>Services</h1>
+                <div class="line-container">
+                    <div class="lines"></div>
+                    <h1>Services</h1>
+                    <div class="lines"></div>
+                </div>
                 <div class="service-box-holder">
                     <div class="service-box">
+                        <!-- anchor tags go around these for links -->
+                        <!-- 384x250px -->
                         <img src="./imgs/abestos_abatement_teaser1.jpg"/>
-                        <h2>Asbestos Abatement and <br/>Removal Services</h2>
-                        <p>put description from bottom of pages here</p>
+                        <h3>Asbestos Abatement and <br/>Removal Services ></h3>
+                        <p>
+                            Intercon Environmental, Inc. is a leader in the asbestos abatement industry.
+                        </p>
                     </div>
                     <div class="service-box">
                         <img src="./imgs/demolition_project_teaser1.jpg"/>
-                        <h2>Demolition Project Services</h2>
-                        <p>put description from bottom of pages here</p>
+                        <h3>Demolition Project Services ></h3>
+                        <p>We have the expertise, team, and equipment in-house to meet your demolition needs.</p>
                     </div>
                     <div class="service-box">
                         <img src="./imgs/mold_abatement_teaser1.jpg"/>
-                        <h2>Mold Abatement</h2>
-                        <p>put description from bottom of pages here</p>
+                        <h3>Mold Abatement ></h3>
+                        <p>
+                            Intercon has a capable staff of professional technicians who are fully certified and specialize in mold remediation.
+                        </p>
                     </div>
                 </div>
             </div>
-            <h1>An Environmental and Demolition Company</h1>
-            <p>
-                Intercon Environmental, Inc. was built on a strong foundation of dedicated team members. Our expansive fleet and equipment provide us with unique, 
-                effective capabilities. We cover every aspect of the abatement, remediation, and demolition processes. <br/>
-                <br/>
-                Intercon has the in-house resources to perform work that other firms would normally outsource to subcontractors. This has proven to be a more reliable, 
-                efficient, and effective means of meeting the needs of our clients. This has given us much greater control in meeting project deadlines and maintaining 
-                a consistently high level of customer satisfaction and quality of work. All projects are completed on time or ahead of schedule and are completed to the 
-                owners' total satisfaction. We offer very competitive rates and we take pride in every project we perform. Please click on the Contact us tab and let us 
-                help you with your project.
-            </p>
+            <div class="join-intercom">
+                <img class="join-intercom-img" src="./imgs/6109154166_c92e076d5b_o.jpg"/>
+                <div class="join-intercom-description">
+                    <div class="join-intercom-description-spacer">
+                        <h2>Join Intercom Environmental</h2>
+                        <p>As a leading company in Asbestos removal we're always looking to grow our team to make a broader impact</p>
+                        <a>
+                            <button>
+                                Apply Here!
+                            </button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="line-container">
+                <div class="lines"></div>
+                <h1>Why Intercom?</h1>
+                <div class="lines"></div>
+            </div>
+            <div class="about-intercom">
+                <div class="about-intercom-description">
+                    <div class="about-intercom-description-spacer">
+                        <h2>An Environmental and Demolition Company</h2>
+                        <p>
+                            Intercon Environmental, Inc. was built on a strong foundation of dedicated team members. Our expansive fleet and equipment provide us with unique, 
+                            effective capabilities. We cover every aspect of the abatement, remediation, and demolition processes. <br/>
+                            <br/>
+                            Intercon has the in-house resources to perform work that other firms would normally outsource to subcontractors. This has proven to be a more reliable, 
+                            efficient, and effective means of meeting the needs of our clients. This has given us much greater control in meeting project deadlines and maintaining 
+                            a consistently high level of customer satisfaction and quality of work. All projects are completed on time or ahead of schedule and are completed to the 
+                            owners' total satisfaction. We offer very competitive rates and we take pride in every project we perform. Please click on the Contact us tab and let us 
+                            help you with your project.
+                        </p>
+                    </div>
+                </div>    
+                <img class="about-intercom-img" src="./imgs/abandoned-factory-hdr-old-building-industrial-1370726-pxhere.com.jpg"/>
+            </div>
         </main>
         <footer>
             
