--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <body>
         <header>
             <div class="logo-date">
-                <img src="./imgs/intercon-logo-2023.jpg"/>
+                <img src="./imgs/index-imgs/intercon-logo-2023.jpg"/>
                 <p>Since 2004</p>
             </div>
             <nav>
+                <!-- make text larger and lower to align with intercon word -->
                 <a class="nav-link" href="/home"><span>Home</span></a>
                 <a class="nav-link" href="/about"><span>About Us</span></a>
                 <a class="nav-link" href="/services"><span>Our Services</span></a>
@@ -27,7 +28,7 @@
                 <!-- PROBABLY SCALE THIS SECTION WIDER WITH LARGER <P> TEXT -->
                 <div class="banner-title-img-box">
                     <h1 class="banner-title">We Simply<br/>Take Care Of It</h1>
-                    <img class="banner-img" src="./imgs/newslider1.jpg"/>
+                    <img class="banner-img" src="./imgs/index-imgs/newslider1.jpg"/>
                 </div>
                 <div class="banner-text-box">
                     <p>
@@ -37,7 +38,6 @@
                 </div>
             </div>
             <div class="services">
-                <!-- need to make images shorter without hamburgering them. also add maybe some pointers i.e. > or something -->
                 <div class="line-container">
                     <div class="lines"></div>
                     <h1>Services</h1>
@@ -45,21 +45,19 @@
                 </div>
                 <div class="service-box-holder">
                     <div class="service-box">
-                        <!-- anchor tags go around these for links -->
-                        <!-- 384x250px -->
-                        <img src="./imgs/abestos_abatement_teaser1.jpg"/>
+                        <img src="./imgs/index-imgs/abestos_abatement_teaser1.jpg"/>
                         <h3>Asbestos Abatement and <br/>Removal Services ></h3>
                         <p>
                             Intercon Environmental, Inc. is a leader in the asbestos abatement industry.
                         </p>
                     </div>
                     <div class="service-box">
-                        <img src="./imgs/demolition_project_teaser1.jpg"/>
+                        <img src="./imgs/index-imgs/demolition_project_teaser1.jpg"/>
                         <h3>Demolition Project Services ></h3>
                         <p>We have the expertise, team, and equipment in-house to meet your demolition needs.</p>
                     </div>
                     <div class="service-box">
-                        <img src="./imgs/mold_abatement_teaser1.jpg"/>
+                        <img src="./imgs/index-imgs/mold_abatement_teaser1.jpg"/>
                         <h3>Mold Abatement ></h3>
                         <p>
                             Intercon has a capable staff of professional technicians who are fully certified and specialize in mold remediation.
@@ -68,14 +66,15 @@
                 </div>
             </div>
             <div class="join-intercom">
-                <img class="join-intercom-img" src="./imgs/6109154166_c92e076d5b_o.jpg"/>
+                <img class="join-intercom-img" src="./imgs/index-imgs/6109154166_c92e076d5b_o.jpg"/>
                 <div class="join-intercom-description">
                     <div class="join-intercom-description-spacer">
                         <h2>Join Intercom Environmental</h2>
-                        <p>As a leading company in Asbestos removal we're always looking to grow our team to make a broader impact</p>
+                        <p>As a leading company in Demolition and Asbestos removal we're always looking to grow our team to make a broader impact</p>
                         <a>
                             <button>
                                 Apply Here!
+                                <!-- make this font and button bigger -->
                             </button>
                         </a>
                     </div>
@@ -102,11 +101,35 @@
                         </p>
                     </div>
                 </div>    
-                <img class="about-intercom-img" src="./imgs/abandoned-factory-hdr-old-building-industrial-1370726-pxhere.com.jpg"/>
+                <img class="about-intercom-img" src="./imgs/index-imgs/abandoned-factory-hdr-old-building-industrial-1370726-pxhere.com.jpg"/>
             </div>
         </main>
         <footer>
-            
+            <div class="footer-spacer">
+                <a href="https://www.bbb.org/us/tx/mansfield/profile/asbestos-removal/intercon-environmental-inc-0825-235974878/#sealclick" target="_blank" rel="nofollow">
+                    <img src="https://seal-austin.bbb.org/seals/blue-seal-150-110-bbb-235974878.png" >
+                </a> 
+                <div class="footer-badge-holder">
+                    <img class="footer-badge" src="./imgs/footer-imgs/hub.png" alt="footer-badge" >
+                    <img class="footer-badge" src="./imgs/footer-imgs/nctrca.png" alt="footer-badge" >
+                    <img class="footer-badge" src="./imgs/footer-imgs/north-central-texas.png" alt="footer-badge" >
+                    <a href="https://www.tips-usa.com/vendorProfile.cfm?RecordID=26B527A86738E12FA37E24C67F734B77" target="_blank">
+                        <img class="footer-badge" src="./imgs/footer-imgs/tips.jpg" alt="footer-badge" >
+                    </a>
+                    <a href="https://www.choicepartners.org/vendors/intercon-environmental-inc-3" target="_blank">
+                        <img class="footer-badge" src="./imgs/footer-imgs/choice-partner.jpg" alt="footer-badge" >
+                    </a>
+                    <a href="https://www.thebluebook.com/search.html?region=12&amp;searchsrc=thebluebook&amp;searchTerm=intercon&amp;regionLabel=Mansfield%2C+TX" target="_blank">
+                        <img class="footer-badge" src="./imgs/footer-imgs/bluebook.png" alt="footer-badge" >
+
+                    </a>
+                </div>
+                <div class="copyright-text">
+                    <h3>Call Us: 817-477-9995</h3>
+                    <h4>210 S. Walnut Creek Drive<br>Mansfield, Texas 76063</h4>
+                    <p>© 2024 Intercon Environmental Inc., All Rights Reserved.</p>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
