fixed spelling of company namej

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <img class="join-intercom-img" src="./imgs/index-imgs/6109154166_c92e076d5b_o.jpg"/>
                 <div class="join-intercom-description">
                     <div class="join-intercom-description-spacer">
-                        <h2>Join Intercom Environmental</h2>
+                        <h2>Join Intercon Environmental</h2>
                         <p>As a leading company in Demolition and Asbestos removal we're always looking to grow our team to make a broader impact</p>
                         <a>
                             <button>
@@ -82,7 +82,7 @@
             </div>
             <div class="line-container">
                 <div class="lines"></div>
-                <h1>Why Intercom?</h1>
+                <h1>Why Intercon?</h1>
                 <div class="lines"></div>
             </div>
             <div class="about-intercom">
