--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
                 <p>Since 2004</p>
             </div>
             <nav>
-                <!-- make text larger and lower to align with intercon word -->
-                <a class="nav-link" href="/home"><span>Home</span></a>
-                <a class="nav-link" href="/about"><span>About Us</span></a>
-                <a class="nav-link" href="/services"><span>Our Services</span></a>
-                <a class="nav-link" href="certifications"><span>Certifications</span></a>
-                <a class="nav-link" href="contact"><span>Contact Us</span></a>
+                <a class="nav-link" href="index.html"><span>Home</span></a>
+                <a class="nav-link" href="about.html"><span>About Us</span></a>
+                <a class="nav-link" href="services.html"><span>Our Services</span></a>
+                <a class="nav-link" href="certifications.html"><span>Certifications</span></a>
+                <a class="nav-link" href="contact.html"><span>Contact Us</span></a>
             </nav>
         </header>
         <main>
