filled out service sub pages and began organizing service page

--- a/asbestosAbatement.html
+++ b/asbestosAbatement.html
@@ -4,7 +4,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Intercon Environmental</title>
         <link rel="stylesheet" href="header-footer.css">
-        <link rel="stylesheet" href="about.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
@@ -16,7 +15,6 @@
                 <p>Since 2004</p>
             </div>
             <nav>
-                <!-- make text larger and lower to align with intercon word -->
                 <a class="nav-link" href="index.html"><span>Home</span></a>
                 <a class="nav-link" href="about.html"><span>About Us</span></a>
                 <a class="nav-link" href="services.html"><span>Our Services</span></a>
@@ -25,34 +23,51 @@
             </nav>
         </header>
         <main>
-            <h1>About Us</h1>
-            <h2>Our History</h2>
-            <p>Intercon Environmental, Inc. began as a premier asbestos abatement contractor in 2004.</p>
-            <h2>Reliable And Reputable</h2>
+            <h1>Asbestos Abatement and Removal Services</h1>
+            <h2>You Need the Right Abatement Contractor</h2>
+            <!-- <span>this is for the line</span> -->
             <p>
-                The stellar reputation we developed because of our exceptional performance, reliability, and dependability in asbestos abatement allowed us to quickly 
-                expand into mold remediation, and asbestos waste transportation.<br><br>
-                The addition of our demolition division makes us the single source for all of your abatement, remediation, and demolition project needs.
+                The potential health risks associated with asbestos makes contractor selection extremely important.
+                <br><br>
+                Intercon Environmental, Inc. is a leader in the asbestos abatement industry. We have removed millions of square feet of asbestos-containing material from thousands of projects.
+                <br><br>
+                You can be certain that our vast asbestos abatement experience will provide the utmost in safety as well as compliance with all applicable state, local, and federal regulations.
             </p>
-            <h2>Licensed/Certified And Experienced</h2>
+            <h2>EPA And OSHA Licensing / Certification</h2>
             <p>
-                We are proud to have the following license and certifications:<br>
-                <br>
-                <br>- Texas Department of State Health Services (TDSHS)
-                <br>- Historically Underutilized Business (HUB)
-                <br>- Small Business Enterprise (SBE)
-                <br>- Woman-Owned Business Enterprise (WBE)
+                To ensure job site safety and project efficiency, our workforce has completed all EPA and OSHA training courses required for certification and/or licensing to work with asbestos, lead, mold, and other hazardous materials along with general safety courses.
+                <br><br>
+                In addition, our Supervisors and Project Managers oversee every aspect of job site risk management, from planning to final asbestos disposal at an approved and licensed facility.
+                <br><br>
+                As you can see, the Intercon team is fully equipped to ensure safety during every step of the asbestos removal process.
             </p>
-            <h2>Industry Standard Equipment</h2>
+            <h2>Our Techniques and Processes</h2>
+            <ul>
+                <li>Schools and Universities (both Public and Private)</li>
+                <li>
+                    Multi-family Housing Apartment Buildings</li>
+                <li>Commercial Office Buildings</li>
+                <li>Government Buildings</li>
+                <li>Manufacturing Plants</li>
+                <li>Military Buildings</li>
+                <li>Industrial Plants</li>
+                <li>Power Plants</li>
+                <li>Retail Stores</li>
+                <li>Hospitals</li>
+                <li>Airports</li>
+            </ul>
+            <p>The techniques utilized by our asbestos abatement team are optimized for each specific space.</p>
+            <h2>Environmentally Friendly And Interruption Free Disposal</h2>
             <p>
-                Capable staff of experienced abatement and demolition project managers, and expansive fleet of state-of-the-art abatement, demolition, transportation equipment, 
-                give us the capability to perform multiple large scale abatement and demolition projects simultaneously.
+                In many cases, asbestos abatement and removal services must be performed in one portion of a building while the other portions remain occupied and continue to operate.
+                <br><br>
+                We understand how important continued productivity is and we have the experience and technical expertise to remove the asbestos-containing materials without interrupting your day-to-day operations, when possible.
             </p>
-            <h2>Our Mission Statement</h2>
+            <h2>The Bottom Line</h2>
             <p>
-                We are committed to providing exemplary asbestos abatement, lead abatement, mold remediation, demolition, and waste transport services that are safe, efficient, and legally compliant, on-time, and at competitive prices.<br><br>
-
-                Simply put – We <span>CAN</span> and <span>WILL</span> get your project done on-time, on-budget, and beyond your expectations.
+                Our certifications, extensive experience, and professional techniques in asbestos removal and disposal enable us to provide you with a stable, reliable, and trustworthy team of Project Managers, Supervisors, and Laborers, all of whom have ability develop a work plan that is specific to your specific project.
+                <br><br>
+                <a href="contact.html">Contact</a> Intercon Environmental, Inc. today for professional and knowledgeable asbestos abatement.
             </p>
         </main>
         <footer>
@@ -82,3 +97,5 @@
                 </div>
             </div>
         </footer>
+    </body>
+</html>
