--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Intercon Environmental</title>
         <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="header-footer.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
@@ -70,7 +71,7 @@
                     <div class="join-intercom-description-spacer">
                         <h2>Join Intercon Environmental</h2>
                         <p>As a leading company in Demolition and Asbestos removal we're always looking to grow our team to make a broader impact</p>
-                        <a>
+                        <a href="application.html">
                             <button>
                                 Apply Here!
                                 <!-- make this font and button bigger -->
