--- a/moldRemediation.html
+++ b/moldRemediation.html
@@ -4,7 +4,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Intercon Environmental</title>
         <link rel="stylesheet" href="header-footer.css">
-        <link rel='stylesheet' href="contact.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
@@ -24,51 +23,40 @@
             </nav>
         </header>
         <main>
-            <h1>Contact Information</h1>
+            <h1>Mold Remediation</h1>
+            <h2>The Problem</h2>
             <p>
-                Thank you for your interest in Intercon Environmental, Inc. We look forward to the opportunity of working with you. Please complete the form below and one of our estimators will contact you.
+                The health, safety, and liability issues associated with mold have become one of today’s biggest environmental concerns.
+                <br><br>
+                The adverse effects of mold exposure and related indoor air quality issues have been thrust into the spotlight in recent years. This has resulted in 
+                greatly increased awareness by those affected, and greatly increased liability for those responsible.
             </p>
-            <form>
-                <!-- form needs to have an action -->
-                <label for="firstName">First name:</label>
-                <input type="text" id="firstName" name="firstName" value="" >
-                <label for="lastname">Last name:</label>
-                <input type="text" id="lastname" name="lastname" value="" >
-                <label for="company">Company:</label>
-                <input type="text" id="company" name="company" value="" >
-                <label for="title">Title:</label>
-                <input type="text" id="title" name="title" value="" >
-                <label for="phoneNumber">Phone number:</label>
-                <input type="text" id="phoneNumber" name="phoneNumber" value="" >
-                <label for="firstName">First name:</label>
-                <input type="text" id="firstName" name="firstName" value="" >
-                <h2>Interested In:</h2><br>
-                <input type="checkbox" id="asbestosAbatement" name="asbestosAbatement" value="Asbestos Abatement" >
-                <label for="asbestosAbatement">Asbestos Abatement</label>
-                <input type="checkbox" id="moldAbatement" name="moldAbatement" value="Mold Abatement" >
-                <label for="moldAbatement">Mold Abatement</label>
-                <input type="checkbox" id="buildingDemolition" name="buildingDemolition" value="Building Demolition" >
-                <label for="buildingDemolition">Building Demolition</label>
-                <input type="checkbox" id="interiorDemolition" name="interiorDemolition" value="Interior Demolition" >
-                <label for="interiorDemolition">Interior Demolition</label>
-                <input type="checkbox" id="selectiveDemolition" name="selectiveDemolition" value="Selective Demolition" >
-                <label for="selectiveDemolition">Selective Demolition</label>
-                <h2>How Did You Hear About us?</h2><br>
-                <input type="radio" id="referral" name="referral" value="Referral" >
-                <label for="referral">Referral</label>
-                <input type="radio" id="newsArticle" name="newsArticle" value="News Article" >
-                <label for="newsArticle">News Article</label>
-                <input type="radio" id="theBlueBook" name="theBlueBook" value="The Blue Book" >
-                <label for="theBlueBook">The Blue Book</label>
-                <input type="radio" id="google" name="google" value="Google" >
-                <label for="google">Google</label>
-                <input type="radio" id="other" name="other" value="Other" >
-                <label for="other">Other</label>
-                <label>Comments:</label>
-                <input type="text" id="comments" name="comments" value="" >
-                <!-- need to add google check box to make it not fake
-                 -->
-            </form>
+            <h2>The Solution</h2>
+            <p>
+                At Intercon Environmental, Inc. we understand all of these issues, and can help by providing safe, effective, and efficient solutions.
+                <br><br>
+                At Intercon we have extensive experience in abatement/remediation. We have used this experience to develop containment construction, and remediation 
+                techniques that comply with all state regulations and guidelines.
+            </p>
+            <h2>Our Services</h2>
+            <p>
+                First and foremost, the moisture source must be identified and eliminated. The existing source of active mold growth is then removed along with any suspect porous materials. Next all non-porous materials are thoroughly cleaned and sanitized.
+                <br><br>
+                We Perform Mold Remediation for:
+                <ul>
+                    <li>Commercial buildings</li>
+                    <li>Industrial complexes</li>
+                    <li>Schools</li>
+                    <li>Fire and water damaged buildings</li>
+                </ul>
+                Intercon has a capable staff of professional technicians who are fully certified and specialize in mold remediation.
+                <br><br>
+                Our accurate record keeping, strict adherence to protocols, and highly skilled technicians are just a few of the reasons Intercon Environmental, Inc. is the best choice for your mold remediation project.
+            </p>
+            <h2>Contact Us</h2>
+            <p>
+                <a href="contact.html">Contact</a> Intercon Environmental, Inc. today for all of your Mold Remediation needs.
+            </p>
         </main>
         <footer>
             <div class="footer-spacer">
