--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Intercon Environmental</title>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="header-footer.css">
         <link rel="stylesheet" href="services.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,31 +26,39 @@
         </header>
         <main>
             <h1>Services</h1>
-            <div>
-                <h2>Asbestos Abatement</h2>
-                <p>
-                    Intercon Environmental, Inc. is a leader in the asbestos abatement industry. The techniques utilized by our asbestos abatement personnel are optimized for each specific project.
-                </p>
-                <a>Read More >></a>
-            </div>
-            <div>
-                <h2>Demolition Services</h2>
-                <p>
-                    Intercon Environmental, Inc. is more than just a demolition contractor. As an environmental contractor, we recycle demolition waste whenever practical to reduce the impact on landfills.                </p>
-                <a>Read More >></a>
-            </div>
-            <div>
-                <h2>Mold Remediation</h2>
-                <p>
-                    Health, safety and liability issues associated with mold are some of today's more sensitive environmental concerns. At Intercon Environmental we understand this and provide solutions.                </p>
-                <a>Read More >></a>
-            </div>
-            <div>
-                <h2>Asbestos Waste Transport</h2>
-                <p>
-                    Smart Solutions Transport, our Asbestos Waste Transportation Division, gives Intercon the capability to provide in-house trucking for asbestos debris removal and disposal.
-                </p>
-                <a>Read More >></a>
+            <div class="services">
+                <div class="service-box">
+                    <div class="picture-placeholder" style="height: 300px; width: 300px; background-color: black;"></div>
+                    <h2>Asbestos Abatement</h2>
+                    <p>
+                        Intercon Environmental, Inc. is a leader in the asbestos abatement industry. The techniques utilized by our asbestos abatement personnel are optimized for each specific project.
+                    </p>
+                    <a href="asbestosAbatement.html">Read More >></a>
+                </div>
+                <div class="service-box">
+                    <div class="picture-placeholder" style="height: 300px; width: 300px; background-color: black;"></div>
+                    <h2>Demolition Services</h2>
+                    <p>
+                        Intercon Environmental, Inc. is more than just a demolition contractor. As an environmental contractor, we recycle demolition waste whenever practical to reduce the impact on landfills.
+                    </p>
+                    <a href="demolitionServices.html">Read More >></a>
+                </div>
+                <div class="service-box">
+                    <div class="picture-placeholder" style="height: 300px; width: 300px; background-color: black;"></div>
+                    <h2>Mold Remediation</h2>
+                    <p>
+                        Health, safety and liability issues associated with mold are some of today's more sensitive environmental concerns. At Intercon Environmental we understand this and provide solutions.
+                    </p>
+                    <a href="moldRemediation.html">Read More >></a>
+                </div>
+                <div class="service-box">
+                    <div class="picture-placeholder" style="height: 300px; width: 300px; background-color: black;"></div>
+                    <h2>Asbestos Waste Transport</h2>
+                    <p>
+                        Smart Solutions Transport, our Asbestos Waste Transportation Division, gives Intercon the capability to provide in-house trucking for asbestos debris removal and disposal.
+                    </p>
+                    <a href="asbestosWasteTransport.html">Read More >></a>
+                </div>
             </div>
             <!-- probably make this a box -->
         </main>
