--- a/asbestosWasteTransport.html
+++ b/asbestosWasteTransport.html
@@ -4,7 +4,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Intercon Environmental</title>
         <link rel="stylesheet" href="header-footer.css">
-        <link rel='stylesheet' href="contact.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
@@ -24,51 +23,33 @@
             </nav>
         </header>
         <main>
-            <h1>Contact Information</h1>
+            <h1>Asbestos Waste Transport & Disposal</h1>
+            <h2>The Problem</h2>
             <p>
-                Thank you for your interest in Intercon Environmental, Inc. We look forward to the opportunity of working with you. Please complete the form below and one of our estimators will contact you.
+                Removing the asbestos-containing material is only half the problem, the other half is ensuring that the waste is transported and disposed properly and safely.
             </p>
-            <form>
-                <!-- form needs to have an action -->
-                <label for="firstName">First name:</label>
-                <input type="text" id="firstName" name="firstName" value="" >
-                <label for="lastname">Last name:</label>
-                <input type="text" id="lastname" name="lastname" value="" >
-                <label for="company">Company:</label>
-                <input type="text" id="company" name="company" value="" >
-                <label for="title">Title:</label>
-                <input type="text" id="title" name="title" value="" >
-                <label for="phoneNumber">Phone number:</label>
-                <input type="text" id="phoneNumber" name="phoneNumber" value="" >
-                <label for="firstName">First name:</label>
-                <input type="text" id="firstName" name="firstName" value="" >
-                <h2>Interested In:</h2><br>
-                <input type="checkbox" id="asbestosAbatement" name="asbestosAbatement" value="Asbestos Abatement" >
-                <label for="asbestosAbatement">Asbestos Abatement</label>
-                <input type="checkbox" id="moldAbatement" name="moldAbatement" value="Mold Abatement" >
-                <label for="moldAbatement">Mold Abatement</label>
-                <input type="checkbox" id="buildingDemolition" name="buildingDemolition" value="Building Demolition" >
-                <label for="buildingDemolition">Building Demolition</label>
-                <input type="checkbox" id="interiorDemolition" name="interiorDemolition" value="Interior Demolition" >
-                <label for="interiorDemolition">Interior Demolition</label>
-                <input type="checkbox" id="selectiveDemolition" name="selectiveDemolition" value="Selective Demolition" >
-                <label for="selectiveDemolition">Selective Demolition</label>
-                <h2>How Did You Hear About us?</h2><br>
-                <input type="radio" id="referral" name="referral" value="Referral" >
-                <label for="referral">Referral</label>
-                <input type="radio" id="newsArticle" name="newsArticle" value="News Article" >
-                <label for="newsArticle">News Article</label>
-                <input type="radio" id="theBlueBook" name="theBlueBook" value="The Blue Book" >
-                <label for="theBlueBook">The Blue Book</label>
-                <input type="radio" id="google" name="google" value="Google" >
-                <label for="google">Google</label>
-                <input type="radio" id="other" name="other" value="Other" >
-                <label for="other">Other</label>
-                <label>Comments:</label>
-                <input type="text" id="comments" name="comments" value="" >
-                <!-- need to add google check box to make it not fake
-                 -->
-            </form>
+            <h2>Our Services</h2>
+            <p>
+                Intercon has the flexibility and know-how to complete asbestos waste hauling and disposal projects of any size and any complexity.
+                <br><br>
+                Intercon can provide expertise on completing the required Uniform Hazardous Waste Manifest for your project, or we can provide preprinted Uniform Hazardous Waste 
+                Manifests complete with information about waste streams, approval codes, and disposal locations.
+            </p>
+            <h2>Our Fleet/Equipment</h2>
+            <p>
+                Our extensive fleet of transport and disposal equipment includes:
+                <br>
+                <ul>
+                    <li>40-cubic yard open-top roll-off containers</li>
+                    <li>40-cubic yard enclosed-top roll-off containers</li>
+                    <li>Roll-off trucks</li>
+                    <li>Semi-tractor/trailer rigs with capacities from 20 to 60 cubic yards                    </li>
+                </ul>
+            </p>
+            <h2>Contact Us</h2>
+            <p>
+                <a href="contact.html">Contact</a> Intercon Environmental, Inc. today for all of your Asbestos Transportation and Disposal needs.
+            </p>
         </main>
         <footer>
             <div class="footer-spacer">
