--- a/certifications.html
+++ b/certifications.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Intercon Environmental</title>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="header-footer.css">
         <link rel="stylesheet" href="certifications.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
