added some pictures to be used later and styled the about page

--- a/about.html
+++ b/about.html
@@ -25,35 +25,48 @@
             </nav>
         </header>
         <main>
-            <h1>About Us</h1>
-            <h2>Our History</h2>
-            <p>Intercon Environmental, Inc. began as a premier asbestos abatement contractor in 2004.</p>
-            <h2>Reliable And Reputable</h2>
-            <p>
-                The stellar reputation we developed because of our exceptional performance, reliability, and dependability in asbestos abatement allowed us to quickly 
-                expand into mold remediation, and asbestos waste transportation.<br><br>
-                The addition of our demolition division makes us the single source for all of your abatement, remediation, and demolition project needs.
-            </p>
-            <h2>Licensed/Certified And Experienced</h2>
-            <p>
-                We are proud to have the following license and certifications:<br>
-                <br>
-                <br>- Texas Department of State Health Services (TDSHS)
-                <br>- Historically Underutilized Business (HUB)
-                <br>- Small Business Enterprise (SBE)
-                <br>- Woman-Owned Business Enterprise (WBE)
-            </p>
-            <h2>Industry Standard Equipment</h2>
-            <p>
-                Capable staff of experienced abatement and demolition project managers, and expansive fleet of state-of-the-art abatement, demolition, transportation equipment, 
-                give us the capability to perform multiple large scale abatement and demolition projects simultaneously.
-            </p>
-            <h2>Our Mission Statement</h2>
-            <p>
-                We are committed to providing exemplary asbestos abatement, lead abatement, mold remediation, demolition, and waste transport services that are safe, efficient, and legally compliant, on-time, and at competitive prices.<br><br>
+            <div class="main-text">
+                <h1>About Us</h1>
+                <div class="our-history">
+                    <h2>Our History</h2>
+                    <!-- add the lines in these -->
+                    <div class="lines"></div>
+                    <p>Intercon Environmental, Inc. began as a premier asbestos abatement contractor in 2004.</p>
+                </div>
+                <div class="about-us">
+                    <h2>Reliable And Reputable</h2>
+                    <div class="lines"></div>
+                    <p>
+                        The stellar reputation we developed because of our exceptional performance, reliability, and dependability in asbestos abatement allowed us to quickly 
+                        expand into mold remediation, and asbestos waste transportation.<br><br>
+                        The addition of our demolition division makes us the single source for all of your abatement, remediation, and demolition project needs.
+                    </p>
+                    <h2>Licensed/Certified And Experienced</h2>
+                    <div class="lines"></div>
+                    <p>
+                        We are proud to have the following license and certifications:<br>
+                        <ul>
+                        <li>- Texas Department of State Health Services (TDSHS)
+                        <li>- Historically Underutilized Business (HUB)
+                        <li>- Small Business Enterprise (SBE)
+                        <li>- Woman-Owned Business Enterprise (WBE)
+                        </ul>
+                    </p>
+                    <h2>Industry Standard Equipment</h2>
+                    <div class="lines"></div>
+                    <p>
+                        Capable staff of experienced abatement and demolition project managers, and expansive fleet of state-of-the-art abatement, demolition, transportation equipment, 
+                        give us the capability to perform multiple large scale abatement and demolition projects simultaneously.
+                    </p>
+                    <h2>Our Mission Statement</h2>
+                    <div class="lines"></div>
+                    <p>
+                        We are committed to providing exemplary asbestos abatement, lead abatement, mold remediation, demolition, and waste transport services that are safe, efficient, and legally compliant, on-time, and at competitive prices.<br><br>
 
-                Simply put – We <span>CAN</span> and <span>WILL</span> get your project done on-time, on-budget, and beyond your expectations.
-            </p>
+                        Simply put – We <span>CAN</span> and <span>WILL</span> get your project done on-time, on-budget, and beyond your expectations.
+                    </p>
+                </div>   
+            </div>
         </main>
         <footer>
             <div class="footer-spacer">
